--- a/index.html
+++ b/index.html
@@ -426,7 +426,7 @@
 
 
       <div class="field">
-        <label class="label">*Demo - Ziyaret Görselleri</label>
+        <label class="label">Demo - Ziyaret Görselleri</label>
         <div class="control">
           <div class="file has-name is-fullwidth">
             <label class="file-label">
@@ -645,5 +645,6 @@ function setLocation(lat, lng) {
   </body>
 
 </html>
+
 
 
